--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,33 @@
 #inputBox{
     min-width: 28vw;
     transition: transform 0.1s ease-in-out;
+    
 }
+.offcanvas-footer{
+    padding: 1rem 1rem;
+    border-top: 1px solid #6c757d;
+}
+
+
+.outerDivFull { margin:50px; } 
+
+.switchToggle input[type=checkbox]{height: 0; width: 0; visibility: hidden; position: absolute; }
+.switchToggle label {cursor: pointer; text-indent: -9999px; width: 70px; max-width: 70px; height: 30px; background: #d1d1d1; display: block; border-radius: 100px; position: relative; }
+.switchToggle label:after {content: ''; position: absolute; top: 2px; left: 2px; width: 26px; height: 26px; background: #fff; border-radius: 90px; transition: 0.3s; }
+.switchToggle input:checked + label, .switchToggle input:checked + input + label  {background: #3e98d3; }
+.switchToggle input:checked + label:after, .switchToggle input:checked + input + label:after {left: calc(100% - 2px); transform: translateX(-100%); }
+.switchToggle label:active:after {width: 60px; } 
+.toggle-switchArea { margin: 10px 0 10px 0; }
+
+.toggleAuto input + label:before, .toggleAuto input + input + label:before {content: 'Off'; position: absolute; top: 5px; left: 35px; width: 26px; height: 26px; border-radius: 90px; transition: 0.3s; text-indent: 0; color: #fff; }
+.toggleAuto input:checked + label:before, .toggleAuto input:checked + input + label:before {content: 'On'; position: absolute; top: 5px; left: 10px; width: 26px; height: 26px; border-radius: 90px; transition: 0.3s; text-indent: 0; color: #fff; }
+
+
+.toggleStyle input[type=checkbox]{height: 0; width: 0; visibility: hidden; position: absolute; }
+.toggleStyle label {cursor: pointer; text-indent: -9999px; width: 70px; max-width: 70px; height: 30px; background: #3e98d3; display: block; border-radius: 5px; position: relative; }
+.toggleStyle label:after {content: ''; position: absolute; top: 2px; left: 2px; width: 26px; height: 26px; background: #fff; border-radius: 5px; transition: 0.3s; }
+.toggleStyle input:checked + label, .switchToggle input:checked + input + label  {background: #3e98d3; }
+.toggleStyle input:checked + label:after, .switchToggle input:checked + input + label:after {left: calc(100% - 2px); transform: translateX(-100%); }
+.toggleStyle label:active:after {width: 60px; } 
+.toggleStyle input + label:before, .toggleStyle input + input + label:before {content: 'UK'; position: absolute; top: 5px; left: 35px; width: 26px; height: 26px; border-radius: 90px; transition: 0.3s; text-indent: 0; color: #fff; }
+.toggleStyle input:checked + label:before, .toggleStyle input:checked + input + label:before {content: 'US'; position: absolute; top: 5px; left: 10px; width: 26px; height: 26px; border-radius: 90px; transition: 0.3s; text-indent: 0; color: #fff; }
